/* $Id: ChangeLog 336 2005-10-31 11:12:42Z knut.osmundsen@oracle.com $ */

2005-10-31: bird
    - kBuild/tools/VCC70.kmk:
        o Use the -f option with kDepPre to make sure nt/wine/cl doesn't
          screw up the path casing anywhere.
    - kBuild/bin/x86.linux/kDepPre, kBuild/bin/x86.win32/kDepPre:
        o Rebuild with latest code.
2005-10-30: bird
    - kBuild/env.sh:
        o amd64.
        o kDepCCxx -> kDepPre. Ash.
    - kBuild/bin/amd64.linux/kDepPre, src/kDepPre/kDepPre.c:
        o Fix case option - need it on unix for cl.exe with wine.

2005-10-29: bird
    - kBuild/bin/amd64.linux/kDepPre, src/kDepPre/kDepPre.c:
        o Strip drive letters on non-PC OSes.

2005-10-28: bird
    - kBuild/footer.h:
        o Fixed a couple of defaults so it all works right on amd64.
    - kBuild/bin/amd64.linux/:
        o Added binaries. ash is 32-bit!

2005-10-14: bird
    - src/kDepPre/kDepPre.c, kBuild/bin/x86.win32/kDepPre.exe:
        o Corrected bug in line skipping where two lines would be skipped.
        o Corrected slashes on win32.

2005-10-03: bird
    - src/kDepPre/kDepPre.c, kBuild/bin/x86.win32/kDepPre.exe:
        o Fixed stupid stupid bug in the win32 case correcting code.
          Rebuilt the win32 binary.

2005-08-11: bird
    - kBuild/footer.kmk:
        o Enh. the _OBJECT_BASE hack for stripping of source paths within the project.

    - kBuild/tools/VCC70.kmk:
        o Use $(tolower ) to construct the right .pdb names for cleanup.

    - src/gmake/read.c:
        o print target name 'target pattern' errors.

    - kBuild/header.kmk:
        o Use $(abspath ).

    - src/gmake/variable.c:
        o Added KMK_FEATURES which indicates what's present+working and what's not.

    - src/gmake/w32/pathstuff.c, src/kDepPre/kDepPre.c, src/kDepPre/Makefile.kmk:
        o Fixed casing paths on win32.

    - src/gmake/function.c, src/gmake/Makefile.kmk:
        o Fixed $(abspath ) on Win32 and OS/2.
        o Added $(tolower ) and $(toupper ).
