@@ -1,10 +1,16 @@
-/* $Id: ChangeLog 336 2005-10-31 11:12:42Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 338 2005-11-07 19:16:08Z knut.osmundsen@oracle.com $ */
+
+2005-11-07: bird
+    - src/kDepPre/kDepPre.c, kBuild/bin/x86.linux/kDepPre, kBuild/bin/x86.win32/kDepPre.exe:
+        o Added new option -s for generating stub dependencies just like -Wp,-MP.
+    - kBuild/tools/GCC3.kmk, kBuild/tools/GCC3OMF.kmk:
+        o Added -Wp,-MP to compile jobs for better dependencies.
 
 2005-10-31: bird
     - kBuild/tools/VCC70.kmk:
         o Use the -f option with kDepPre to make sure nt/wine/cl doesn't
           screw up the path casing anywhere.
-    - kBuild/bin/x86.linux/kDepPre, kBuild/bin/x86.win32/kDepPre:
+    - kBuild/bin/x86.linux/kDepPre, kBuild/bin/x86.win32/kDepPre.exe:
         o Rebuild with latest code.
 2005-10-30: bird
     - kBuild/env.sh:
